hanling key generation for unittest
